--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,11 @@ dependencies = [
     "ultralytics (>=8.3.130,<9.0.0)",
     "ip-adapter (>=0.1.0,<0.2.0)",
     "einops (>=0.8.1,<0.9.0)",
+    "scikit-image (>=0.25.2,<0.26.0)",
+    "torchmetrics (>=1.7.1,<2.0.0)",
+    "lpips (>=0.1.4,<0.2.0)",
+    "torch-fidelity (>=0.3.0,<0.4.0)",
+    "scipy (>=1.15.3,<2.0.0)",
 ]
 
 
