--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,10 @@ authors = [
     {name = "Djordje Pavlovic",email = "djordje.pav@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<4.0"
 dependencies = [
     "diffusers (>=0.33.1,<0.34.0)",
     "transformers (>=4.51.3,<5.0.0)",
-    "opencv-python (>=4.11.0.86,<5.0.0.0)",
     "fastapi (>=0.115.12,<0.116.0)",
     "pillow (>=11.2.1,<12.0.0)",
     "huggingface-hub (>=0.31.1,<0.32.0)",
@@ -27,6 +26,8 @@ dependencies = [
     "lpips (>=0.1.4,<0.2.0)",
     "torch-fidelity (>=0.3.0,<0.4.0)",
     "scipy (>=1.15.3,<2.0.0)",
+    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
+    "tinydb (>=4.8.2,<5.0.0)",
 ]
 
 
